-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9, 10, 11, 12
-
Component/s: hotspot
-
b09
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8243345 | 11.0.8-oracle | Roland Westrelin | P4 | Resolved | Fixed | b04 |
| JDK-8228868 | 11.0.5 | Roland Westrelin | P4 | Resolved | Fixed | b02 |
A number of intrinsics omit null checks on inputs that are known to be not null. They should use GraphKit::must_be_not_null() instead.
- backported by
-
JDK-8228868 Intrinsics that assume some input non null should use GraphKit::must_be_not_null()
-
- Resolved
-
-
JDK-8243345 Intrinsics that assume some input non null should use GraphKit::must_be_not_null()
-
- Resolved
-