8209684: Intrinsics that assume some input non null should use GraphKit::must_be_not_null() Reviewed-by: kvn, thartmann